# asyncio-tailer

./: LICENSE  pyproject.toml  reqs-test.txt  setup.py
.github/workflows/: tests.yml
asyncio_tailer/: __init__.py  tailer.py
asynctailer/: __init__.py  async_task_service.py  async_thread.py  asynctailer.py
tailer/: __init__.pyi
test/: _path_patch.py  test_asynctailer.py  test_tailer.py
test/data/: sample.txt
